examples/good/03-IncrementDecrement.tms
void main() {

  int x = 0;
  printInt(x);
  x++;
  printInt(x);
  x--;
  printInt(x);

  return;
}