examples/bad/06-NoArgsGiven.tms
string y(string z) {
  return z;
}

void main() {
  string x = y();
  return;
}